--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -16,12 +16,14 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "countup": "^1.8.2",
     "fnm": "^0.0.0",
     "framer-motion": "^11.2.12",
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
     "node": "^22.4.0",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "tailwind-merge": "^2.3.0",
